change img on send request form

--- a/userprofile/templates/userprofile/components/forms/send_request_form.html
+++ b/userprofile/templates/userprofile/components/forms/send_request_form.html
@@ -2,9 +2,10 @@
 {% load static %}
 {% load materializecss %}
 {% block form_image %}
-    <img height="200"
+    <img 
+        height="200"
          width="auto"
-         src="{% static 'img/write.svg' %}"
+         src="{% static 'img/bird.svg' %}"
          alt=""/>
 {% endblock form_image %}
 {% block form_title %}
