fix: update links in templates to refeer to correct template name

--- a/userprofile/templates/base.html
+++ b/userprofile/templates/base.html
@@ -29,7 +29,7 @@
                 <li><a class="red-text text-lighten-1" href="#!">Delete Account</a></li>
                 <li class="divider"></li>
                 <li class="divider"></li>
-                <li><a href="{% url 'test_profile' %}">Go to profile</a></li>
+                <li><a href="{% url 'profile' %}">Go to profile</a></li>
               </ul>
             <nav class="z-depth-0 white">
                 <div class="container">
