--- a/userprofile/templates/userprofile/change_password.html
+++ b/userprofile/templates/userprofile/change_password.html
@@ -11,7 +11,7 @@
     <div class="crumbs-row row">
         <nav class="crumbs-box col s10 m6 right transparent z-depth-0">
             <div class="nav-wrapper right ">
-                  <a  href="{% url 'test_profile' %}" class="breadcrumb grey-text">Profile</a>
+                  <a  href="{% url 'profile' %}" class="breadcrumb grey-text">Profile</a>
                   <a  href="{% url 'send_request' %}" class="breadcrumb black-text">Change password</a>
             </div>
         </nav>
