--- a/userprofile/templates/userprofile/response_detail.html
+++ b/userprofile/templates/userprofile/response_detail.html
@@ -11,7 +11,7 @@
     <div class="crumbs-row row">
         <nav class="crumbs-box col s12 m9 right transparent z-depth-0">
             <div class="nav-wrapper right ">
-                  <a  href="{% url 'test_profile' %}" class="breadcrumb grey-text">Profile</a>
+                  <a  href="{% url 'profile' %}" class="breadcrumb grey-text">Profile</a>
                   <a  href="" class="breadcrumb black-text">Options</a>
                   <a  href="{% url 'send_request' %}" class="breadcrumb grey-text">Send Request</a>
             </div>
