--- a/userprofile/templates/userprofile/response_detail.html
+++ b/userprofile/templates/userprofile/response_detail.html
@@ -95,9 +95,7 @@
             </p>
         </div>
     </div>
-           
-    
-    
+    <script defer type="text/javascript" src="{% static 'base/js/components/responseToolbox.js' %}"></script>  
 </div>
 {% endblock content %}
 
