--- a/userprofile/templates/userprofile/delete_account.html
+++ b/userprofile/templates/userprofile/delete_account.html
@@ -1,12 +1,34 @@
 {% extends "base.html" %}
-
+{% load static %}
+{% block head %}
+<link rel="stylesheet" href="{% static 'base/css/delete_account.css' %}"/>
+{% endblock head %}
 {% block content %}
-
-Are you sure you want to delete you account and all your referenses? {{ user.pk }}
-
-<form action="" method="post">
-    {% csrf_token %}
-    <button class="btn" type="submit">Delete Account</button>
-</form>
-
+<div class="background">
+    <section class="container">
+        <div class="row">
+            <div class="col s12 center-align">
+                <h2 class="grey-text text-lighten-3 center-align">We are sad to see you go...</h2>
+                <img width="400" height="auto" src="{% static 'img/empty-desk.svg' %}" class="responsive-img " alt="empty desk">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12 center-align">
+                <h3 class="hs white-text">Are you sure you want to delete you account and all your referenses?</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12 offset-s2 offset-m5">
+                <div class="valign-wrapper">
+                    <a href="{% url 'profile' %}" class="btn ">No! take me back</a>
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        <button class="btn btn-flat red lighten-2 right grey-text text-lighten-2" type="submit">Delete Account</button>
+                    </form>
+                </div>
+                   
+            </div>
+        </div>
+    </section>
+</div>
 {% endblock content %}
