--- a/userprofile/templates/userprofile/change_password.html
+++ b/userprofile/templates/userprofile/change_password.html
@@ -4,8 +4,8 @@
 <div class="container">
     <div class="heading-row row row-margin-delete">
         <div class="heading-box right-align col s12">
-            <h2 class="hm ">Ask for a reference</h2>
-            <p>Simply by sending this form</p>
+            <h2 class="hm ">Change Password</h2>
+            <p> </p>
         </div>
     </div>
     <div class="crumbs-row row">
