fix: change heading position on profile page

--- a/userprofile/templates/userprofile/profile.html
+++ b/userprofile/templates/userprofile/profile.html
@@ -5,13 +5,13 @@
         <section class="profile-section">
             <div class="row color ">
                 <div class="heading-row row row-margin-delete">
-                    <div class="heading-box right-align col s12 m11">
+                    <div class="heading-box right-align col s12 m12">
                         <h2 class="hm ">Hey {{ user.first_name }}!</h2>
                         <p>your references are stored here</p>
                     </div>
                 </div>
                 <div class="crumbs-row row">
-                    <nav class="crumbs-box col s10 m11 pull-m1 right transparent z-depth-0">
+                    <nav class="crumbs-box col s10 m11 right transparent z-depth-0">
                         <div class="nav-wrapper right ">
                             <a href="#!" class="breadcrumb black-text">Profile</a>
                             <a href="{% url 'send_request' %}" class="breadcrumb grey-text">Send Request</a>
