fix: add link to pendingToggler script

--- a/userprofile/templates/userprofile/profile.html
+++ b/userprofile/templates/userprofile/profile.html
@@ -132,7 +132,7 @@
                     {% endfor %}
                 </ul>
             </div>
-
         </div>
     </section>
+    <script defer type="text/javascript" src="{% static 'base/js/components/pendingToggler.js' %}"></script>
 {% endblock content %}
